# VisuaLlama

./: .env.template  .gitignore  CITATION.bib  CITATION.cff  LICENSE  README.md  example.env  pyproject.toml  setup.py
.archive/: detr_detection.py.bak  meta_source.py
.github/: GitHub-Actions_Custom-Workflow.yml  dependabot.yml
.github/workflows/: Docker-PDM.yml  Docker.yml  Orchestration-Tests.yml  dependency-tests.yml  dockerfile-test.yml  pdm-test.yml  stalebot.yml
backend/: README.md  context_manager.py  detectron2_manager.py  fastapi_manager.py  image_describer.py  llama2chat.py  utility.py
documents/: Computer Vision and Conversational Interface Development Roadmap - LLaMA 2 Integration.md  LLaMA 2 Chat Integration Guide for FastAPI Applications Image Descriptions and Prompt Structures.md
documents/Code-Reviews/8-27-23/: Review-A.md  Review-B.md  Review-C.md
documents/Code-Reviews/8-28-23/: Review-A.md
documents/Code-Reviews/8-29-23/: Review-A.md  Review-B.md  Review-B_Step-By-Step-Plan.md  Review-C_Next-Modules.md  Review-C_Pseudocode_Steps-Forward.md
documents/Dev-Documentation/8-29-23/: DevRoadmap_0829-A.md  Module-Improvements_0829-B.md  TodaysTasks_0829-A.md
documents/Dev-Documentation/templates/: 03-Progress-Documentation.md
documents/Dev-Documents/.archive/: LLaMA 2 Chat Integration Guide for FastAPI Applications Image Descriptions and Prompt Structures.md  chatbot_handler.py  count_objects.py  database_agent.py  db_test.py  models.py  non-pdm_pyproject.toml
documents/Dev-Documents/10-2-23/: 1.md
documents/Dev-Documents/9-27-23/: Data Storage and Library Recommendations (GPT).txt
documents/Dev-Documents/archive/: requirements.txt
documents/Development-Progress-Documentation/: Computer Vision and Conversational Interface Development Roadmap - LLaMA 2 Integration.md
documents/Development-Progress-Documentation/templates/: 01-template.md  02-template_Module-Improvements.md
documents/Development-Roadmaps/: ComprehensiveRoadmap_0827-A.md  Computer Vision and Conversational Interface Development Roadmap - LLaMA 2 Integration.md  DevRoadmap_0829-A.md
documents/Development-Roadmaps/8-27-23/: ComprehensiveRoadmap_0827-A.md
documents/Development-Roadmaps/8-29-23/: DevRoadmap_0829-A.md  Module-Improvements_0829-B.md
documents/Development-Roadmaps/templates/: 01-template.md
orchestration/: Dockerfile  Dockerfile copy  compose.yml  setup.sh  start_services.sh
src/: config.ini
src/LLMhandlers/: dynamic_vqa.py  llama_loader.py  multi_model.py  vilt_power.py
src/MMLLM/: database_operations.py  detr_detection.py  meta_source.py  mmvslma.py  sqlalc_db_ops.py  todo.txt
src/MMLLM/meta/: TODO.TXT
src/app/: backend.py  index.html  main.ts
src/app/gradio/: gradio_ui-core.py
src/database/: agent.py  crud_enum.py  db_test.py  session_manager.py
src/language-models/: multi_modal_visuallama.py  nextboyworkingtester.py  sqlalc_mm_visuallama.py  todo.txt
src/models/: llama_loader.py
src/routes/: gradio_ui-core.py
src/tests/: test_suite.py
src/train/: detr_training.py  preprocessing-notes.md
src/utils/: load_model.py
tests/: __init__.py  llama-hf.py  test_meta_source.py  test_suite.py  vilt_testsuite.py
