[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "VisuaLlama"
version = "v0.3"
description = "A conversational, object-counting assistant."
authors = [
    {name = "Daethyra (Daemon Carino)", email = "dev-daethyra@protonmail.com"},
]


requires-python = ">=3.10"
dependencies = [
    "Pillow",
    "fastapi",
    "requests",
    "torch",
    "transformers",
]
readme = "README.md"
license = {text = "GNU AGPL"}
classifiers = [
    "Development Status :: v0.3 - Alpha",
    "Intended Audience :: Non-technical Users, Developers",
    "License :: OSI Approved :: Affero GNU GPL v3.0",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[tool.pdm.dev-dependencies]
lint = [
    "flake8",
    "black"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-env",
    "pytest-dotenv",
    "pytest-mock",
]
doc = ["mkdocs"]